--- a/frontend/src/styles/ButtonText.css
+++ b/frontend/src/styles/ButtonText.css
@@ -1,6 +1,13 @@
 .button {
-    background-color: blue;
-    color: #6B6B6B;
+    background-color: #347B98;
+    border: none;
+    color: white;
+    text-align: center;
+    opacity: 0.9;
+    transition: 0.3s;
+    display: inline-block;
+    text-decoration: none;
+    cursor: pointer;
 }
 
 
